# python-mlops

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
notebooks/: Dockerfile  fortune_1000.ipynb  pyproject.toml
notebooks/src/: fortune_1000.ipynb
notebooks/src/datasets/: Fortune 1000 Companies by Revenue.csv
