[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Romina"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
numpy = "^1.23.2"
matplot = "^0.1.9"
seaborn = "^0.12.0"
notebook = "^6.4.12"
jupyterlab = "^3.4.6"
ipykernel = "^6.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
